--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -6,11 +6,12 @@ body {
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
+.modal {
+  height: 200px;
+  position: relative;
 }
 
-* {
-  box-sizing: border-box;
+.close-modal {
+  top: 12px !important;
+  right: 12px !important;
 }
