--- a/src/styles/Navbar.module.scss
+++ b/src/styles/Navbar.module.scss
@@ -43,7 +43,7 @@ $small: 500px;
   flex: 1;
   flex-wrap: wrap;
   align-items: center;
-  justify-content: flex-end;
+  justify-content: center;
   li {
     padding: 5px;
     margin: 10px 20px;
